# yoink

./: Cargo.toml  DESIGN.md  README.md  taskfile.yaml
.cargo/: config.toml
crates/yoink/: Cargo.toml
crates/yoink-clipboard/: Cargo.toml
crates/yoink-clipboard/src/: lib.rs  state.rs  worker.rs
crates/yoink-core/: Cargo.toml
crates/yoink-core/src/: doc.rs  entry.rs  lib.rs  mode.rs  scope.rs
crates/yoink-discovery/: Cargo.toml
crates/yoink-discovery/src/: browse.rs  lib.rs
crates/yoink-discovery/tests/: two_instances.rs
crates/yoink-server/: Cargo.toml
crates/yoink-server/assets/: index.html
crates/yoink-server/examples/: ui_fixture.rs
crates/yoink-server/src/: lib.rs  loopback.rs  routes.rs  state_json.rs
crates/yoink-sync/: Cargo.toml
crates/yoink-sync/src/: connection.rs  dialer.rs  frames.rs  lib.rs  socket.rs
crates/yoink-sync/tests/: sync.rs
crates/yoink/src/: app.rs  banner.rs  config.rs  main.rs
