[package]
name = "yoink"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
yoink-clipboard = { workspace = true }
yoink-core = { workspace = true }
yoink-discovery = { workspace = true }
yoink-server = { workspace = true }
yoink-sync = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
gethostname = { workspace = true }
open = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
socket2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
